--- a/backend/pqc_engine/Cargo.toml
+++ b/backend/pqc_engine/Cargo.toml
@@ -12,7 +12,12 @@ serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 anyhow = "1.0"
 thiserror = "1.0"
+pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
 
 [lib]
 name = "pqc_engine"
 crate-type = ["cdylib", "rlib"]
+
+[features]
+default = []
+python = ["pyo3"]
